k8s/base/istio/istio-operator.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: istio-operator
  labels:
    name: istio-operator
    part-of: teei-csr-platform
